Fixing overflow for mobile layout

--- a/client/src/scss/components/_nav-bar.scss
+++ b/client/src/scss/components/_nav-bar.scss
@@ -6,7 +6,11 @@
   border-right: solid $secondary_border_gray 1px;
   background-color: $primary_white;
   z-index: 2;
-  overflow-y: scroll;
+  
+  @media only screen and (max-width: 850px) {
+    overflow-y: scroll;
+    
+  }
 
   ul {
     margin: 85px 0 0 0;
